tests/NormalTests/paczka1/fuzzy1/16351998.err
Error in line 2: wALNRsTdgu A160 94,3
Error in line 25: gdpT S251 98,7
Error in line 29: gdpT A160 25,0
Error in line 33: lTMhYnu S251 91,3
Error in line 32: DkUyiFb6A A802 9,6
